[package]
name = "ratagui"
version = "0.1.0"
edition = "2024"

[lib]
name = "ratagui"
path = "src/lib.rs"

[[bin]]
name = "example"
path = "src/main.rs"

[features]
default = [ "departure_mono_nf" ]
departure_mono_nf = []

[dependencies]
crossterm = "0.29.0"
eframe = "0.33.3"
egui = "0.33.3"
env_logger = "0.11.9"
ratatui = "0.30"
