[package]
name = "ratagui"
version = "0.1.0"
edition = "2024"

[lib]
name = "ratagui"
path = "src/lib.rs"

[features]
default = ["wayland"]
wayland = ["eframe/wayland"]
x11 = ["eframe/x11"]

[dependencies]
crossterm = "0.29.0"
ratatui-core = "0.1.0"

# removing accesskit and default_fonts as they arent needed atm
eframe = { version = "0.33.3", default-features = false, features = ["glow", "wayland", "x11"] }
egui = { version = "0.33.3", default-features = false }

[dev-dependencies]
ratatui = "0.30.0"
edtui = "0.11.1"
